Debug release and by vector.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,14 @@ project(BASESTADECT VERSION 0.1.0)
 # 规定.h头文件路径
 include_directories(src)
 
+include_directories(
+    include 
+    &{catkin_INCLUDE_DIRS} 
+    /usr/local/include/pcl-1.12
+    /usr/local/include/eigen3
+    /usr/local/include/vtk-9.2
+)
+
 # 生成静态链接库
 # add_library(method STATIC
 #     src/method.cpp
@@ -15,7 +23,7 @@ include_directories(src)
 #     src/method.cpp
 # )
 
-# 将.cpp/.c/.cc生成可执行文件
+# 将.cpp/.c/.cc生成可执行文件 第一个参数指定可执行文件名称
 # add_executable(BASESTADECT src/linextra.cpp)
 
 # 对add_library和add_executable生成的文件进行链接
@@ -24,6 +32,9 @@ include_directories(src)
 
 add_executable(WRITEFILE src/writefile.cpp)
 target_link_libraries(WRITEFILE)
+
+# add_executable(RABBIT src/rabbit.cpp)
+# target_link_libraries(RABBIT)
 
 # 设置编译为debug版本并显示警告信息
 # 相当于 g++ -g -Wall -c main.c -o test
