Smooth and fliter

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,14 +4,6 @@ project(BASESTADECT VERSION 0.1.0)
 # 规定.h头文件路径
 include_directories(src)
 
-include_directories(
-    include 
-    &{catkin_INCLUDE_DIRS} 
-    /usr/local/include/pcl-1.12
-    /usr/local/include/eigen3
-    /usr/local/include/vtk-9.2
-)
-
 # 生成静态链接库
 # add_library(method STATIC
 #     src/method.cpp
@@ -23,6 +15,7 @@ include_directories(
 #     src/method.cpp
 # )
 
+
 # 将.cpp/.c/.cc生成可执行文件 第一个参数指定可执行文件名称
 # add_executable(BASESTADECT src/linextra.cpp)
 
@@ -33,8 +26,19 @@ include_directories(
 add_executable(WRITEFILE src/writefile.cpp)
 target_link_libraries(WRITEFILE)
 
+# find_package(PCL 1.12.0 REQUIRED)
+# include_directories(
+#     include 
+#     &{catkin_INCLUDE_DIRS} 
+#     /usr/local/include/pcl-1.12
+#     /usr/local/include/eigen3
+#     /usr/local/include/vtk-9.2
+# )
+# link_directories(${PCL_LIBRARY_DIRS})
+# add_definitions(${PCL_DEFINITIONS})
+
 # add_executable(RABBIT src/rabbit.cpp)
-# target_link_libraries(RABBIT)
+# target_link_libraries(RABBIT ${PCL_LIBRARIES})
 
 # 设置编译为debug版本并显示警告信息
 # 相当于 g++ -g -Wall -c main.c -o test
